--- a/main.html
+++ b/main.html
@@ -7,20 +7,21 @@
   <body>
     <header>
       <nav>
-        <ui>
+        <ul>
           <li><button type="button">Поиск</button></li>
           <li><button type="button">Закладки</button></li>
           <li><button type="button">Корзина</button></li>
           <li><button type="button">Оформить заказ</button></li>
           </ul>
+          
+          <p> +7 (812)555-05-55<br>г.Санкт-Петербург,ул.Большая Конюшенная, д.19/8</p>
           <ul>
-            <li><a href="address">г.Санкт-Петербург,ул.Большая Конюшенная, д.19/8</a></li>
-            <li><button type="button">Войти</button></li>
-            <li><button type="button">Регистрация</button></li>
+         <li><button type="button">Войти</button></li>
+         <li><button type="button">Регистрация</button></li>
           </ul>
           <ul>
-          <li><a href="home.html">Главная</a></li>
-          <li><a href="company.html">Компания</a></li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="news.html">Новости</a></li>
           <li><a href="special offer">Спецпредлодения</a></li>
@@ -33,61 +34,55 @@
       <h1>Товары</h1>
       <ul>
         <li>
-          <h2>Материалы</h2>
+          <a href="#"> Материалы</a>
           <p>на любой вкус</p>
-        </li>
-        <li>
-          <h2>Инструменты</h2>
+          <a href="#"> Инструменты</a>
           <p>на все случаи</p>
-        </li>
-        <li>
-          <h2>Техника</h2>
+          <a href="#"> Техника</a>
           <p>для стройки</p>
-        </li>
-        <li>
-          <h2>Скидка 50%</h2>
+          <a href="#"> Скидка 50%</a>
           <p>на 350 товаров</p>
-        </li>
-        <li>
-          <h2>Доставка</h2>
+          <a href="#"> Доставка</a>
           <p>бесплатно</p>
-        </li>
-        <li>
-          <h2>Дрели</h2>
+          <a href="#"> Дрели</a>
           <p>соседям на радость</p>
         </li>
       </ul>
       <section>
         <h3>Популярные товары</h3>
         <ul>
-          <li><a href="catolog-item.html">Перфоратор<br>BFG 900</a></li>
-          <li><a href="catalog-item.html">Перфоратор<br>BFG 3000</a></li>
-          <li><a href="catalog-item.html">Перфоратор<br>BFG 6600</a></li>
-          <li><a href="catalog-item.html">Перфоратор<br>BFG 2000</a></li>
+          <li><a href="catolog-item.html">Перфоратор BFG 900</a></li>
+          <b>2590 руб.</b>
+          <li><a href="catalog-item.html">Перфоратор BFG 3000</a></li>
+          <b>15500 руб.</b>
+          <li><a href="catalog-item.html">Перфоратор BFG 6600</a></li>
+          <b>25500 руб.</b>
+          <li><a href="catalog-item.html">Перфоратор BFG 2000</a></li>
+          <b>15500 руб.</b>
         </ul>
       </section>
 
-      <section>
-        <h3>Популярные производители</h3>
-        <ul>
-          <li><a href="#">"BOSCH"</a></li>
-          <li><a href="#">"MAKITA"</a></li>
-          <li><a href="#">"DeWALT"</a></li>
-          <li><a href="#">"интерскол"</a></li>
-          <li><a href="#">"HITACI"</a></li>
-          <li><a href="#">"LG"</a></li>
-          <li><a href="#">"AEG POWER SOLUTIONS"</a></li>
-          <li><a href="#">"metabo work.don't play"</a></li>
-        </ul>
-      </section>
-      <section>
-        <h4>Сервисы</h4>
-        <p>Хороший интернет магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+<section>
+  <h3>Популярные производители</h3>
+  <ul>
+    <li><a href="#">"BOSCH"</a></li>
+    <li><a href="#">"MAKITA"</a></li>
+    <li><a href="#">"DeWALT"</a></li>
+    <li><a href="#">"интерскол"</a></li>
+    <li><a href="#">"HITACI"</a></li>
+    <li><a href="#">"LG"</a></li>
+    <li><a href="#">"AEG POWER SOLUTIONS"</a></li>
+    <li><a href="#">"metabo work.don't play"</a></li>
+ </ul>
+ </section>
+  <section>
+    <h4>Сервисы</h4>
+      <p>Хороший интернет магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 </section>
 
 <section>
   <h4>Доставка</h4>
-  <p>Мы с удовольствием доствим ваш товар прямо <br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
+  <p>Мы с удовольствием доствим ваш товар прямо вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,поднимая его на ваш этаж!</p>
 </section>
 
 <section>
@@ -101,7 +96,7 @@
 <section>
   <h5>Компания Техномарт</h5>
   <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.<br>Мы можем достаить ваш товар в самые отдаленные точки России!</p>
-<p>Техномарт работает со многими транспортными компаниями:</p>
+  <p>Техномарт работает со многими транспортными компаниями:</p>
 <ul>
   <li><a href="#">Деловые линии</a></li>
   <li><a href="#">Автотрейд</a></li>
@@ -114,7 +109,6 @@
 </section>
     </main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 <footer>
   <p>г. Санкт-Петербург,ул. Б.Конюшенная, д. 19/8<br>+7(812)555-05-55</p>
   <ul>
