--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
           <li><button type="button">Корзина</button></li>
           <li><button type="button">Оформить заказ</button></li>
           </ul>
+        
           
           <p> +7 (812)555-05-55<br>г.Санкт-Петербург,ул.Большая Конюшенная, д.19/8</p>
           <ul>
@@ -50,9 +51,10 @@
       </ul>
       <section>
         <h3>Популярные товары</h3>
+        <img src="popular.png" width="100" height="50"> 
         <ul>
           <li><a href="catolog-item.html">Перфоратор BFG 900</a></li>
-          <b>2590 руб.</b>
+          <b>259 0 руб.</b>
           <li><a href="catalog-item.html">Перфоратор BFG 3000</a></li>
           <b>15500 руб.</b>
           <li><a href="catalog-item.html">Перфоратор BFG 6600</a></li>
