--- a/index.html
+++ b/index.html
@@ -47,20 +47,24 @@
           <p>бесплатно</p>
           <a href="#"> Дрели</a>
           <p>соседям на радость</p>
+          <img src="img/man.jpg"></img>
         </li>
       </ul>
       <section>
-        <h3>Популярные товары</h3>
-        <img src="popular.png" width="100" height="50"> 
+        <h3>Популярные товары</h3> 
         <ul>
           <li><a href="catolog-item.html">Перфоратор BFG 900</a></li>
-          <b>259 0 руб.</b>
+          <b>2590 руб.</b>
+          <img src="img/Perforator1.jpg"></img>
           <li><a href="catalog-item.html">Перфоратор BFG 3000</a></li>
           <b>15500 руб.</b>
+          <img src="img/Perforator2.jpg"></img>
           <li><a href="catalog-item.html">Перфоратор BFG 6600</a></li>
           <b>25500 руб.</b>
+          <img src="img/Perforator3.jpg"></img>
           <li><a href="catalog-item.html">Перфоратор BFG 2000</a></li>
           <b>15500 руб.</b>
+          <img src="img/Perforator4.png"></img>
         </ul>
       </section>
 
@@ -84,7 +88,7 @@
 
 <section>
   <h4>Доставка</h4>
-  <p>Мы с удовольствием доствим ваш товар прямо вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,поднимая его на ваш этаж!</p>
+  <p>Мы с удовольствием доствим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,поднимая его на ваш этаж!</p>
 </section>
 
 <section>
@@ -125,7 +129,7 @@
     <li><a href="special offer">Спецпредложения</a></li>
   </ul>
   <div>
-    <p>2010-2017<br>Компания "Техномарт"<br>Все права защищенны.</p>
+    <p>2010-2017<br>Компания "Техномарт"<br>Все права защищены.</p>
     <ul>
       <li><a href="#">Фейсбук</a></li>
       <li><a href="#">Контакт</a></li>
