добавила svg, испаравила ошибки.

--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,7 @@
   <body>
     <header>
       <nav>
+        <a href="index.html">img/logo-technomart.svg" width="136.5" height="21.59" alt="Логотип Техномарт"</a>
         <ul>
           <li><a href="#">Поиск</a></li>
           <input type="text"name='search'class="search" placeholder="Поиск">
@@ -41,16 +42,16 @@
             <legend>Цена:</legend>
             <legend>Производители:</legend>
             <ul>
-              <li class="filter-option">BOSH</li>
-              <li class="filter-option">ИНТЕРСКОЛ</li>
-              <li class="filter-option">MAKITA</li>
-              <li class="filter-option">DEWALT</li>
-              <li class="filter-option">HITACHI</li>
+              <li class="filter-option"><input type="checkbox">BOSH</li>
+              <li class="filter-option"><input type="checkbox">ИНТЕРСКОЛ</li>
+              <li class="filter-option"><input type="checkbox">MAKITA</li>
+              <li class="filter-option"><input type="checkbox">DEWALT</li>
+              <li class="filter-option"><input type="checkbox">HITACHI</li>
             </ul>
             <legend>Питание:</legend>
             <ul>
-              <li class="filter-option">АККУМУЛЯТОРНЫЕ</li>
-              <li class="filter-option">СЕТЕВЫЕ</li>
+              <li class="filter-option"><input type="radio">АККУМУЛЯТОРНЫЕ</li>
+              <li class="filter-option"><input type="radio">СЕТЕВЫЕ</li>
             </ul>
           </fieldset>
           </form>
@@ -63,39 +64,42 @@
           <h3>
             <a href="catalog.html"></a>
             <span class="catalog-category">Перфоратор BOSH BFG300</span>
-            <b>15500 р.</b>
+            <del>25500 P.</del>
+            <span>15500 P.</span>
             <img src="img/Perforator1.jpg"></img>
           </h3>
           <h3>
             <p class="catalog-item-image"></p>
             <a href="catalog.html"></a>
             <span class="catalog-category">Перфоратор BOSH BFG900</span>
-            <b>25900 р.</b>
+            <del>30500 P.</del>
+            <span>25900 P.</span>
             <img src="img/Perforator2.jpg"></img>
           </h3>
           <h3>
             <a href="catalog.html"></a>
             <span class="catalog-category">Перфоратор BOSH BFG2000</span>
-            <b>12500 р.</b>
+            <span>12500 р.</span>
             <button type="button">Купить</button>
             <button type="button">В закладки</button>
           </h3>
           <h3>
             <a href="catalog.html"></a>
             <span class="catalog-category">Перфоратор BOSH BFG3000</span>
-            <b>15500 р.</b>
+            <span>15500 P.</span>
             <img src="img/Perforator4.png"><img>
           </h3>
           <h3>
             <a href="catalog.html"></a>
             <span class="catalog-category">Перфоратор BOSH BFG6000</span>
-            <b>25500 р.</b>
+            <del>30500 P.</del>
+            <span>25500 P.</span>
             <img src="img/Perforator_5.jpg">  
           </h3>
           <h3>
             <a href="catalog.html"></a>"
             <span class="catalog-category">Перфоратор BOSH BFG3000</span>
-            <b>12500 р.</b>
+            <span>12500 р.</span>
             <img src="img/Perforator_4.jpg"> 
           </h3>
         </li>
