--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <body>
     <header>
       <nav>
+        <a>
+        <img src="img/Makita.jpg" width="136.5" height="21.59" alt="Логотип Техномарт">
+        </a>
         <ul>
-          <li><a href="#">Поиск</a></li>
-          <input type="text"name='search'class="search" placeholder="Перфоратор">
+          <input type="text" name="search" class="search" placeholder="Поиск">
           <li><a href="#">Закладки:</a></li>
           <li><a href="#">Корзина:</a></li>
           <li><a href="#">Оформить заказ</a></li>
@@ -56,18 +58,22 @@
         <h3>Популярные товары</h3> 
         <ul>
           <li><a href="catolog-item.html">Перфоратор BFG 900</a></li>
-          <b>2590 руб.</b>
+          <del>22500 P.</del>
+          <span>2590 P.</span>
           <img src="img/Perforator1.jpg"></img>
           <li><a href="catalog-item.html">Перфоратор BFG 3000</a></li>
-          <b>15500 руб.</b>
+          <del>25500 P.</del>
+          <span>15500 P.</span>
           <img src="img/Perforator2.jpg"></img>
           <button type="#">Купить</button>
           <button type="#">В закладки</button>
           <li><a href="catalog-item.html">Перфоратор BFG 6600</a></li>
-          <b>25500 руб.</b>
+          <del>30500 P.</del>
+          <span>25500 P.</span>
           <img src="img/Perforator3.jpg"></img>
           <li><a href="catalog-item.html">Перфоратор BFG 2000</a></li>
-          <b>15500 руб.</b>
+          <del>25500 P.</del>
+          <span>15500 P.</span>
           <img src="img/Perforator4.png"></img>
         </ul>
       </section>
@@ -134,7 +140,7 @@
     <li><a href="#">Контакты</a></li>
     <li><a href="#">Материалы</a></li>
     <li><a href="#">Техника</a></li>
-    <li><a href="#">Инструменты></a></li>
+    <li><a href="#">Инструменты</a></li>
     <li><a href="#">Спецпредложения</a></li>
   </ul>
   <div>
