--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,8 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">img/logo-technomart.svg" width="136.5" height="21.59" alt="Логотип Техномарт"</a>
+       <a href="index.html">Логотип Техномарт</a>
+       <img src="img/logo-technomart.svg"></img>
         <ul>
           <li><a href="#">Поиск</a></li>
           <input type="text"name='search'class="search" placeholder="Поиск">
