--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a>
-        <img src="img/Makita.jpg" width="136.5" height="21.59" alt="Логотип Техномарт">
+        <img src="img/logo-technomart.svg" width="136.5" height="21.59" alt="Логотип Техномарт">
         </a>
         <ul>
           <input type="text" name="search" class="search" placeholder="Поиск">
