--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <img src="img/map.jpg"></img>
           <button type="#">Заблудились?НАПИШИТЕ НАМ.</button>
+          <form action="http://htmlacademy.ru" method="POST">
+            <label for="Name">Ваше имя</label>
+            <input type="text" name="name" value="" placeholder="Имя Фамилия" id="name">
+            <label for="email">Ваш email</label>
+            <input type="text" name="email" value="" placeholder="email@example.com" id="email">
+            <label for="text">Текст письма</label>
+            <input type="text" name="text" value="" placeholder="В свободной форме" id="text">
+            <input type="submit" value="Отправить">
+          </form>
+          <button type="button">X</button>
       </section>
     </main>
 
