--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
           <button type="#">Заблудились?НАПИШИТЕ НАМ.</button>
           <form action="http://htmlacademy.ru" method="POST">
             <label for="Name">Ваше имя</label>
-            <input type="text" name="name" value="" placeholder="Имя Фамилия" id="name">
+            <input id="text" name="name" value="" placeholder="Имя Фамилия">
             <label for="email">Ваш email</label>
-            <input type="text" name="email" value="" placeholder="email@example.com" id="email">
+            <input id="text" name="email" value="" placeholder="email@example.com">
             <label for="text">Текст письма</label>
-            <input type="text" name="text" value="" placeholder="В свободной форме" id="text">
+            <input id="text" name="text" value="" placeholder="В свободной форме">
             <input type="submit" value="Отправить">
           </form>
           <button type="button">X</button>
