завернула форму в контейнер

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-       <a href="index.html" img src="img/logo-technomart.svg">
+       <a href="index.html"><img src="img/logo-technomart.svg">
       </a>
       
         <ul>
@@ -47,15 +47,15 @@
             <legend>Производители:</legend>
             <div class="fabricators-list">
               <input id="BOSH" type="checkbox" name="manufacturers" checked>
-              <label for="bosh">BOSH</label>
-              <input id="interscol" type="checkbox" name="manufacturers">
-              <label>ИНТЕРСКОЛ</label>
-              <input id="makita" type="checkbox" name="manufacturers" checked>
-              <label>MAKITA</label>
-              <input id="dewalt" type="checkbox" name="manufacturers">
-              <label>DEWALT</label>
-              <input id="hitachi" type="checkbox" name="manufacturers">
-              <label>HITACHI</label>
+              <label for="BOSH">BOSH</label>
+              <input id="ИНТЕРСКОЛ" type="checkbox" name="manufacturers">
+              <label for="ИНТЕРСКОЛ"></label>
+              <input id="MAKITA" type="checkbox" name="manufacturers" checked>
+              <label for="MAKITA"></label>
+              <input id="DEWALT" type="checkbox" name="manufacturers">
+              <label for="DEWALT"></label>
+              <input id="HITACHI" type="checkbox" name="manufacturers">
+              <label for="HITACHI"></label>
             </div>
           </fieldset>
           <fieldset>
