--- a/index.html
+++ b/index.html
@@ -126,17 +126,7 @@
         <h5>Контакты</h5>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <img src="img/map.jpg"></img>
-          <button type="#">Заблудились?НАПИШИТЕ НАМ.</button>
-          <form action="http://htmlacademy.ru" method="POST">
-            <label for="Name">Ваше имя</label>
-            <input id="text" name="name" value="" placeholder="Имя Фамилия">
-            <label for="email">Ваш email</label>
-            <input id="text" name="email" value="" placeholder="email@example.com">
-            <label for="text">Текст письма</label>
-            <input id="text" name="text" value="" placeholder="В свободной форме">
-            <input type="submit" value="Отправить">
-          </form>
-          <button type="button">X</button>
+          <button type="#">Заблудились?НАПИШИТЕ НАМ.</button>   
       </section>
     </main>
 
@@ -170,5 +160,17 @@
     <a href="mailto">htmlacademy.ru</a>
   </p>
 </footer>
-</body>
+    <div>
+      <form action="http://htmlacademy.ru" method="POST">
+        <label for="Name">Ваше имя</label>
+        <input id="text" name="name" value="" placeholder="Имя Фамилия">
+        <label for="email">Ваш email</label>
+        <input id="text" name="email" value="" placeholder="email@example.com">
+        <label for="text">Текст письма</label>
+        <textarea>В свободной форме</textarea>
+        <input type="submit" value="Отправить">
+      </form>
+        <button type="button">X</button>
+     </div>
+  </body>
 </html>
