--- a/catalog.html
+++ b/catalog.html
@@ -48,14 +48,14 @@
             <div class="fabricators-list">
               <input id="BOSH" type="checkbox" name="manufacturers" checked>
               <label for="BOSH">BOSH</label>
-              <input id="ИНТЕРСКОЛ" type="checkbox" name="manufacturers">
-              <label for="ИНТЕРСКОЛ"></label>
+              <input id="INTERSKOL" type="checkbox" name="manufacturers">
+              <label for="INTERSKOL">ИНТЕРСКОЛ</label>
               <input id="MAKITA" type="checkbox" name="manufacturers" checked>
-              <label for="MAKITA"></label>
+              <label for="MAKITA">MAKITA</label>
               <input id="DEWALT" type="checkbox" name="manufacturers">
-              <label for="DEWALT"></label>
+              <label for="DEWALT">DEWALT</label>
               <input id="HITACHI" type="checkbox" name="manufacturers">
-              <label for="HITACHI"></label>
+              <label for="HITACHI">HITACHI</label>
             </div>
           </fieldset>
           <fieldset>
