--- a/catalog.html
+++ b/catalog.html
@@ -46,24 +46,25 @@
           <fieldset>
             <legend>Производители:</legend>
             <div class="fabricators-list">
-              <input id="BOSH" type="checkbox" name="manufacturers" checked>
               <label for="BOSH">BOSH</label>
-              <input id="INTERSKOL" type="checkbox" name="manufacturers">
+              <input id="BOSH" type="checkbox" name="manufacturers" checked>
               <label for="INTERSKOL">ИНТЕРСКОЛ</label>
-              <input id="MAKITA" type="checkbox" name="manufacturers" checked>
+              <input id="INTERSKOL" type="checkbox" name="manufacturers">
               <label for="MAKITA">MAKITA</label>
-              <input id="DEWALT" type="checkbox" name="manufacturers">
+              <input id="MAKITA" type="checkbox" name="manufacturers" checked>
               <label for="DEWALT">DEWALT</label>
-              <input id="HITACHI" type="checkbox" name="manufacturers">
+              <input id="DEWALT" type="checkbox" name="manufacturers">
               <label for="HITACHI">HITACHI</label>
+              <input id="HITACHI" type="checkbox" name="manufacturers">
             </div>
           </fieldset>
           <fieldset>
             <legend>Питание:</legend>
-            <ul>
-              <li class="filter-option"><input type="radio">АККУМУЛЯТОРНЫЕ</li>
-              <li class="filter-option"><input type="radio">СЕТЕВЫЕ</li>
-          </fieldset>
+                <label for="accumulator">Аккумуляторные</label>
+                <input id="accumulator" type="checkbox" name="Аккумуляторные">
+                <label for="web">Сетевые</label>
+                <input id="web" type="checkbox" name="Сетевые">
+           </fieldset>
           </form>
           <button type="button">Показать</button>
         </section>
