--- a/catalog.html
+++ b/catalog.html
@@ -46,24 +46,24 @@
           <fieldset>
             <legend>Производители:</legend>
             <div class="fabricators-list">
-              <label for="BOSH">BOSH</label>
-              <input id="BOSH" type="checkbox" name="manufacturers" checked>
-              <label for="INTERSKOL">ИНТЕРСКОЛ</label>
+              <input id="BOSH" type="checkbox" name="Bosh">
+              <label for="bosh">BOSH</label>
               <input id="INTERSKOL" type="checkbox" name="manufacturers">
-              <label for="MAKITA">MAKITA</label>
+              <label for="interskol">ИНТЕРСКОЛ</label>
               <input id="MAKITA" type="checkbox" name="manufacturers" checked>
-              <label for="DEWALT">DEWALT</label>
+              <label for="makita">MAKITA</label>
               <input id="DEWALT" type="checkbox" name="manufacturers">
-              <label for="HITACHI">HITACHI</label>
+              <label for="dewalt">DEWALT</label>
               <input id="HITACHI" type="checkbox" name="manufacturers">
+              <label for="hitachi">HITACHI</label> 
             </div>
           </fieldset>
           <fieldset>
             <legend>Питание:</legend>
-                <label for="accumulator">Аккумуляторные</label>
-                <input id="accumulator" type="checkbox" name="Аккумуляторные">
-                <label for="web">Сетевые</label>
-                <input id="web" type="checkbox" name="Сетевые">
+               <input id="ACCUMULATOR" type="checkbox" name="Аккумуляторные">
+               <label for="accumulator">Аккумуляторные</label>
+               <input id="WEB" type="checkbox" name="Сетевые">
+               <label for="web">Сетевые</label>
            </fieldset>
           </form>
           <button type="button">Показать</button>
