--- a/catalog.html
+++ b/catalog.html
@@ -46,23 +46,23 @@
           <fieldset>
             <legend>Производители:</legend>
             <div class="fabricators-list">
-              <input id="BOSH" type="checkbox" name="Bosh">
+              <input id="bosh" type="checkbox" name="Bosh" checked>
               <label for="bosh">BOSH</label>
-              <input id="INTERSKOL" type="checkbox" name="manufacturers">
+              <input id="interskol" type="checkbox" name="manufacturers">
               <label for="interskol">ИНТЕРСКОЛ</label>
-              <input id="MAKITA" type="checkbox" name="manufacturers" checked>
+              <input id="makita" type="checkbox" name="manufacturers" checked>
               <label for="makita">MAKITA</label>
-              <input id="DEWALT" type="checkbox" name="manufacturers">
+              <input id="dewalt" type="checkbox" name="manufacturers">
               <label for="dewalt">DEWALT</label>
-              <input id="HITACHI" type="checkbox" name="manufacturers">
+              <input id="hitacgi" type="checkbox" name="manufacturers">
               <label for="hitachi">HITACHI</label> 
             </div>
           </fieldset>
           <fieldset>
             <legend>Питание:</legend>
-               <input id="ACCUMULATOR" type="checkbox" name="Аккумуляторные">
+               <input id="accumulator" type="radio" name="power">
                <label for="accumulator">Аккумуляторные</label>
-               <input id="WEB" type="checkbox" name="Сетевые">
+               <input id="web" type="radio" name="power">
                <label for="web">Сетевые</label>
            </fieldset>
           </form>
