--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
               <label for="makita">MAKITA</label>
               <input id="dewalt" type="checkbox" name="manufacturers">
               <label for="dewalt">DEWALT</label>
-              <input id="hitacgi" type="checkbox" name="manufacturers">
+              <input id="hitachi" type="checkbox" name="manufacturers">
               <label for="hitachi">HITACHI</label> 
             </div>
           </fieldset>
